--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,67 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: #777;
+  padding: 5px 20px;
+}
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right, rgba(145, 113, 115, 0.50), rgba(42, 59, 54, 0.60), rgba(67, 44, 82, 0.60)) , url("../img/hero-img.jpg");
+  background-size: cover;
+  background-position: bottom;
+  clip-path: polygon(0 0, 100% 0, 100% 80vh, 0 100%);
+  position: relative;
+}
+
+.logo__box {
+  position: absolute;
+  top: 10px;
+  left: 40px;
+}
+
+.logo {
+  height: 100px;
+}
+
+.heading__primary--container {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading__primary {
+  color: #fff;
+  text-transform: uppercase;
+}
+.heading__primary--main {
+  display: block;
+  font-weight: 400;
+  font-size: 60px;
+  letter-spacing: 35px;
+
+  animation: moveInLeft 1000ms;
+}
+
+.heading__primary--sub {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 18px;
+}
+
+@keyframes moveInleft {
+  from {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
